fixed ui and terrain generate percentage